# ft_transcendence

./: .env.example  .gitignore  Makefile  Tiltfile  compose.yaml  tiltlib.star
docs/contracts/: auth.md  chat.md  guild.md  notification.md  permissions.md  user.md
docs/schema/: auth.sql  chat.cql  guild.sql  notification.sql  permissions.sql  user.sql
frontend/: .dockerignore  .env.example  .gitignore  .lintstagedrc.json  Dockerfile  eslint.config.mjs  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
infra/nginx/: docs.html  nginx.conf
infra/rabbitmq/: rabbitmq.conf
services/auth/: .dockerignore  .env.example  .env.exemple  .gitignore  Auth.slnx  Directory.Build.props  Dockerfile  Dockerfile.dev  Tiltfile  compose.yaml
services/chat/: .editorconfig  Chat.slnx  Dockerfile  Dockerfile.dev  Tiltfile  compose.yaml
services/gateway/: .air.toml  .dockerignore  .env.example  .gitignore  .test-jwt  .test-jwt-expired  Dockerfile  Dockerfile.debug  Dockerfile.dev  Makefile  Tiltfile  compose.debug.yaml  compose.dev.yaml  compose.yaml  go.mod  go.sum  todo.md
services/guild/: Dockerfile  Dockerfile.dev  Dockerfile.test  Guild.slnx  Tiltfile  compose.yaml
services/notification/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Tiltfile  compose.yaml  docker-compose.yml  package-lock.json  (+3 more)
services/user/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.db  Dockerfile.dev  Makefile  Tiltfile  compose.yaml  docker-compose.yml
services/user/db/: init.sql
services/user/src/: main.rs
(+159 files in other folders)
